--- a/USF_v2/app/src/main/res/values/strings.xml
+++ b/USF_v2/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">USF_v2</string>
+    <string name="app_name">University Society Finder</string>
 </resources>
